--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>Nuzaq</title>
+	<title>Nuzaq Snake Game</title>
 	<style>
 		* { padding: 0px; margin: 0px; }
 		body { background: #ccc; }
